# bengal

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.agents/skills/review-plan-md/: SKILL.md
.claude/: settings.json
.claude/rules/: rust-coding-style.md
docs/: grammar.md
examples/: hello  hello.bengal
src/: error.rs  interface.rs  lib.rs  main.rs  mangle.rs  monomorphize.rs  package.rs  pipeline.rs  pipeline_helpers.rs  suggest.rs  sysroot.rs
src/bir/: instruction.rs  lowering.rs  mod.rs  mono.rs  mono_tests.rs  optimize.rs  printer.rs  printer_tests.rs
src/codegen/: emit_arithmetic.rs  emit_structural.rs  generic_resolution.rs  llvm.rs  llvm_tests.rs  mod.rs  mono_compile.rs  types.rs  wasm.rs
src/lexer/: mod.rs  tests.rs  token.rs
src/parser/: ast.rs  mod.rs  parse_definition.rs  parse_expr.rs  parse_primary.rs  parse_stmt.rs
src/semantic/: expr_analysis.rs  expr_call_analysis.rs  expr_method_analysis.rs  function_analysis.rs  generic_validation.rs  infer.rs  mod.rs  package_analysis.rs  post_mono.rs  pre_mono.rs  resolver.rs  single_module_analysis.rs  stmt_analysis.rs  struct_analysis.rs  tests.rs  types.rs  unify.rs  unify_tests.rs
tests/: arrays.rs  compile_test.rs  control_flow.rs  control_flow_if.rs  control_flow_loop.rs  expressions.rs  functions.rs  generics.rs  interface.rs  methods.rs  modules.rs  native_emit.rs  protocols.rs  separate_compilation.rs  structs.rs  sysroot.rs  type_inference.rs  type_inference_advanced.rs  type_inference_basic.rs  type_inference_errors.rs  variables.rs
tests/common/: mod.rs
(+76 files in other folders)
