[package]
name = "bengal"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.15"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
inkwell = { version = "0.8", features = ["llvm20-1"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"

[dev-dependencies]
tempfile = "3"
